--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "research"]
 	path = research
 	url = https://github.com/chamikasudusinghe/research.git
+[submodule "adapt-lab"]
+	path = adapt-lab
+	url = https://github.com/ADAPT-uiuc/ADAPT-website.git
